# AIHearingAid

./: .gitignore  README.md  audio_plotting.py
deepNeuronalFilter_optimised/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dnf.h
deepNeuronalFilter_optimised/audio_filter/: Audio_to_plot(1window).py  Makefile  audio_filter  audio_filter.cpp  cmake_install.cmake  makescript.sh  parameters.h
deepNeuronalFilter_optimised/audio_filter/wavRead/: Makefile  cmake_install.cmake  demo
deepNeuronalFilter_optimised/cvui/: Makefile  cmake_install.cmake
deepNeuronalFilter_optimised/dnf/: Layer.cpp  Layer.h  Net.cpp  Net.h
learning/alsa_passthough_example/: Makefile  record+play.c
lib/: alsa_cpp_wrapper.cpp  alsa_cpp_wrapper.hpp
lib/examples/: CMakeLists.txt  alsa_cpp_wrapper_test.cpp
recordings_16kHz/: .gitignore
wavRW/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  wavRW  wavRW.cpp  wavWrite.h
